--- a/config.toml
+++ b/config.toml
@@ -34,4 +34,4 @@ enableRobotsTXT = true
   background_color_class = "bg-black"
   featured_image = "/images/gohugo-default-sample-hero-image.jpg"
   recent_posts_number = 2
-  custom_css = ["css/custom.css","css/custom2.css"]
+  custom_css = ["css/custom.css"]
