--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
 title = "てげほげ"
 # TODO: tege.work の DNS を設定したら変える
-baseURL = "https://zen-varahamihira-53ea57.netlify.app/"
+baseURL = "https://tege.work/"
 languageCode = "ja"
 theme = "gohugo-theme-ananke"
 
